5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4383/executions/1577_1331.log
== TEST (2019-03-26 18:23:08) 
-- CODE:
print(x)
x=
x+
-- ERROR:
File "XXXX", line 2
    x=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:23:18) 
-- CODE:
print(x)
x=
x+
-- ERROR:
File "XXXX", line 2
    x=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:28:25) 
-- CODE:
inter var(50)
a=
b=
c=
-- ERROR:
File "XXXX", line 1
    inter var(50)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:34:17) 
-- CODE:
x=50
a=1
b=2
c=3
50/2

-- ERROR:
File "XXXX", line 1
    inter var(50)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
